deploy/5ingress-pathbased.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: mynginx-ingress
  annotations:
    # Ingress Core Settings
    kubernetes.io/ingress.class: "alb"
    alb.ingress.kubernetes.io/scheme: internet-facing
    # In case autodiscovery fails, update this as per enviroment  
    ## alb.ingress.kubernetes.io/subnets: subnet-0xxxxx123,subnet-0xxxxx1234
    ## alb.ingress.kubernetes.io/security-groups: sg-0123456007
    external-dns.alpha.kubernetes.io/hostname: myservice.extdns.myexample.com
    alb.ingress.kubernetes.io/healthcheck-protocol: HTTP
    nginx.ingress.kubernetes.io/rewrite-target: /
    # Heath Check - optional though
    alb.ingress.kubernetes.io/healthcheck-interval-seconds: '15'
    alb.ingress.kubernetes.io/healthcheck-timeout-seconds: '5'
    alb.ingress.kubernetes.io/success-codes: '200'
    alb.ingress.kubernetes.io/healthy-threshold-count: '2'
    alb.ingress.kubernetes.io/unhealthy-threshold-count: '2'
    alb.ingress.kubernetes.io/healthcheck-protocol: HTTP
spec:
  rules:
    - http:
        paths:
          - path: /frontend/*
            backend:
              serviceName: mynginx
              servicePort: 80
          - path: /backend/*
            backend:
              serviceName: mynginx-v2
              servicePort: 80
          - path: /*
            backend:
              serviceName: mynginx-default
              servicePort: 80
